# cuprush-26

./: .env.example  .gitignore  DESIGN.md  LICENSE  PRODUCT.md  README.md  components.json  drizzle.config.ts  eslint.config.js  hermes-agent-plan.md  package.json  pnpm-lock.yaml  railway.json  railway.runner.json  tsconfig.json  vite.config.ts  vitest.config.ts  worldcup-hilo-hackathon-research.md
.claude/: brand-voice-guidelines.md
.github/workflows/: ci.yml
.impeccable/live/: config.json
docs/: cuprush-26-litepaper.md  txline-feedback.md  txline-integration.md
drizzle/: 0000_reflective_synch.sql  0001_vengeful_prodigy.sql  0002_yellow_gravity.sql  0003_glossy_the_twelve.sql  0004_sleepy_madelyne_pryor.sql  0005_boring_medusa.sql  0006_purple_paladin.sql  0007_flimsy_overlord.sql  0008_blushing_venom.sql  0009_empty_lila_cheney.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  0008_snapshot.json  0009_snapshot.json  _journal.json
plans/: PRD.md  brand-og-favicon-metadata.md  cuprush-26-brand-toolkit.md  devnet-only.md  litepaper-disclaimer-license.md  railway-automatic-match-runner.md  railway-cicd.md  railway-serverless-runtime.md  txline-devnet-activation.md  txline-live-client-rework.md
program/: Anchor.toml
program/programs/cuprush/: Cargo.toml
program/programs/cuprush/src/: lib.rs
program/programs/world-cup-hilo/: Cargo.toml
program/programs/world-cup-hilo/src/: lib.rs
scripts/: txline-activate.ts
src/api/: app.ts  (+11 more)
(+176 files in other folders)
