[package]
name = "cuprush"
version = "0.1.0"
description = "CupRush on-chain question + prediction program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cuprush"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "1.1.2"
